# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-6a5b6de66c296918535809aa6a665473971a842f0d80a8837e88e37d92ac1364.json
configuration/: local.yaml  production.yaml
migrations/: 20241015125818_create_subscriptions_table.sql  20241111145107_make_status_not_null_in_subscriptions.sql  20241111145440_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
