[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
claims = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
config = { git = "https://github.com/mehcode/config-rs", branch = "main" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.18"
fake = "2.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8"
url = "2.5.2"


[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
wiremock="0.6"
serde_json="1"
